// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email field matches previous snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
     
  </Text>
  <TextInput
    keyboardType="email-address"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Email"
    returnKeyType="next"
    style={
      Object {
        "height": 80,
      }
    }
    value=""
  />
</View>
`;

exports[`Name field matches previous snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
     
  </Text>
  <TextInput
    keyboardType="default"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Name"
    returnKeyType="next"
    style={
      Object {
        "height": 80,
      }
    }
    value=""
  />
</View>
`;

exports[`Phone field matches previous snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
     
  </Text>
  <TextInput
    keyboardType="phone-pad"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Mobile"
    returnKeyType="done"
    style={
      Object {
        "height": 80,
      }
    }
    value=""
  />
</View>
`;
